--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -43,6 +43,8 @@ services:
       - '--path.sysfs=/host/sys'
       - --collector.filesystem.ignored-mount-points
       - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
+      - --collector.textfile.directory
+      - "/rootfs/node_exporter/textfile_collector"
     ports:
       - 9100:9100
     networks:
@@ -71,20 +73,26 @@ services:
         condition: on-failure    
 
   art_scraper:
-    image: artscraper:v.0.3
+    image: emillime/artscraper:latest
+    ports:
+      - 6080:6080
+      - 5666:5666
     volumes:
-      - "../art_docker/artscraper/data:/artscraper/data"
-      - "../art_docker/artscraper/.scrapy:/artscraper/.scrapy"
+      - "../art_docker/data:/artscraper/data"
     networks:
       - monitor-net
+    deploy:
+      restart_policy:
+        condition: none
 
   cadvisor:
-    image: emillime/raspbian_caadvisor:v.0.0
+    image: budry/cadvisor-arm:latest
     volumes:
       - /:/rootfs:ro
       - /var/run:/var/run:rw
       - /sys:/sys:ro
       - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
     ports:
       - 8080:8080
     networks:
