--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -31,7 +31,7 @@ scrape_configs:
   - job_name: 'prometheus'
 
     # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 5s
+    #scrape_interval: 5s
 
     static_configs:
          - targets: ['localhost:9090']
@@ -40,7 +40,7 @@ scrape_configs:
   - job_name: 'cadvisor'
 
     # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 5s
+    #scrape_interval: 5s
 
     dns_sd_configs:
     - names:
@@ -54,7 +54,7 @@ scrape_configs:
   - job_name: 'node-exporter'
 
     # Override the global default and scrape targets from this job every 5 seconds.
-    scrape_interval: 5s
+    #scrape_interval: 5s
 
     dns_sd_configs:
     - names:
@@ -64,3 +64,10 @@ scrape_configs:
     
 #     static_configs:
 #          - targets: ['node-exporter:9100']
+  - job_name: 'art_scraper'
+    metrics_path: /metrics
+    dns_sd_configs:
+    - names:
+      - 'tasks.art_scraper'
+      type: 'A'
+      port: 6080
